fix spacing

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -34,7 +34,7 @@
             height: 85vh;
             display: flex;
             flex-direction: column;
-            gap: 5vh;
+            // gap: 2vh;
             justify-content: center;
 
             h1 {
